<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--General; DO NOT TRANSLATE-->
    <string name="app_name">Team BlueRidge Paste</string>
    <string name="app_name_short">TBR Paste</string>
    <string name="version_name">2.0.0-beta3</string>

    <!--Main UI-->
    <string name="paste_name">Paste Name:</string>
    <string name="paste_content">Paste Content:</string>
    <string name="paste_url_label">Paste URL:</string>
    <string name="paste_button">Paste!</string>
    <string name="paste_url"/>
    <string name="paste_noText">Please fill in the text boxes</string>
    <string name="paste_toast">Paste URL has been copied to the clipboard.</string>
    <string name="paste_upload">Uploading paste. Please wait</string>

    <!--Preferences-->
    <string name="pref_general">General</string>
    <string name="pref_name">Name</string>
    <string name="pref_name_summary">Your name to be shown on pastes</string>
    <string name="pref_domain">Domain</string>
    <string name="pref_domain_summary">URL where Stikked is installed</string>
    <string name="pref_clipboard">Copy to clipboard</string>
    <string name="pref_clipboard_summary">Automatically copy the paste URL to the clipboard</string>
    <string name="pref_about">About</string>
    <string name="pref_version">Version</string>

    <!--Menu-->
    <string name="action_settings">Settings</string>

</resources>